Fixed collapsing and expanding

--- a/css/pinrate.css
+++ b/css/pinrate.css
@@ -490,8 +490,8 @@ body {
                     background-color: rgba(70, 70, 70, 0);
                     color: #fafafa;
                     display: block;
-                    font-size: 16px;
-                    line-height: 1;
+                    font-size: 14px;
+                    line-height: 1.5;
                     padding: 9px 18px 7px;
                     text-decoration: none;
                 }
